--- a/Feature_Selection.ipynb
+++ b/Feature_Selection.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "de4f7445",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,17 @@
     "    columns=categorical_cols,\n",
     "    drop_first=True,\n",
     "    dtype=int\n",
-    ")"
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "c539de71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"model_input_merged.csv\", index=False)"
    ]
   },
   {
@@ -307,6 +317,51 @@
     "print(\"Common features:\", common)\n",
     "print(\"Only Oslo:\", only_oslo)\n",
     "print(\"Only Copenhagen:\", only_cph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "863220b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coef_table(lasso_model, ridge_model, feature_names, city):\n",
+    "    return pd.DataFrame({\n",
+    "        \"feature\": feature_names,\n",
+    "        \"city\": city,\n",
+    "        \"lasso_coef\": lasso_model.named_steps[\"model\"].coef_,\n",
+    "        \"ridge_coef\": ridge_model.named_steps[\"model\"].coef_,\n",
+    "    })\n",
+    "\n",
+    "# Oslo coefficients\n",
+    "coef_oslo = coef_table(\n",
+    "    lasso_oslo,\n",
+    "    ridge_oslo,\n",
+    "    feat_oslo,\n",
+    "    \"Oslo\"\n",
+    ")\n",
+    "\n",
+    "# Copenhagen coefficients\n",
+    "coef_cph = coef_table(\n",
+    "    lasso_cph,\n",
+    "    ridge_cph,\n",
+    "    feat_cph,\n",
+    "    \"Copenhagen\"\n",
+    ")\n",
+    "\n",
+    "# Combine into one DataFrame\n",
+    "coef_all = pd.concat([coef_oslo, coef_cph], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "2af8e16e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coef_all.to_csv(\"lasso_ridge_results.csv\", index=False)"
    ]
   }
  ],
