--- a/Feature_Selection.ipynb
+++ b/Feature_Selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "a1980e85",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "65819d56",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "de4f7445",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kubic\\AppData\\Local\\Temp\\ipykernel_22296\\1336936624.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\kubic\\AppData\\Local\\Temp\\ipykernel_22296\\4040382033.py:9: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[binary_cols] = df[binary_cols].replace({\"t\": 1, \"f\": 0})\n"
      ]
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "1a22dea4",
    "metadata": {},
    "outputs": [],
@@ -123,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "de2dc68d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_models(df_city):\n",
     "    X = df_city.drop(columns=[\"price_local\", \"city\"])\n",
-    "    y = df_city[\"price_local\"]\n",
+    "    y = np.log(df_city[\"price_local\"])\n",
     "\n",
     "    ridge = Pipeline([\n",
     "        (\"scaler\", StandardScaler()),\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "b6667a74",
    "metadata": {},
    "outputs": [
@@ -163,10 +163,10 @@
      "text": [
       "Oslo:\n",
       "Ridge non-zero: 99\n",
-      "Lasso non-zero: 61\n",
+      "Lasso non-zero: 74\n",
       "Copenhagen:\n",
       "Ridge non-zero: 95\n",
-      "Lasso non-zero: 46\n"
+      "Lasso non-zero: 73\n"
      ]
     }
    ],
@@ -182,47 +182,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "f82a2cf6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "host_listings_count                             5413.259560\n",
-       "host_total_listings_count                      -2474.640746\n",
-       "calculated_host_listings_count                 -2284.786031\n",
-       "estimated_revenue_l365d                          803.695025\n",
-       "estimated_occupancy_l365d                       -699.548507\n",
-       "minimum_maximum_nights                          -400.224724\n",
-       "maximum_maximum_nights                           257.676619\n",
-       "bathrooms_text_4.5 baths                         238.898227\n",
-       "bedrooms                                         183.781339\n",
-       "property_category_Special                        139.704157\n",
-       "bathrooms_text_2 baths                           124.022502\n",
-       "bathrooms_text_1.5 shared baths                  121.991468\n",
-       "maximum_nights_avg_ntm                           118.400771\n",
-       "bathrooms_text_2.5 baths                         116.481548\n",
-       "has_reviews                                     -101.191141\n",
-       "distance_to_center_km                            -91.798860\n",
-       "availability_30                                   72.520143\n",
-       "bathrooms                                         69.254146\n",
-       "accommodates                                      68.642828\n",
-       "calculated_host_listings_count_private_rooms     -67.930374\n",
-       "maximum_nights                                    54.844492\n",
-       "beds                                              53.729211\n",
-       "availability_365                                  50.975781\n",
-       "bathrooms_text_3.5 baths                          42.466810\n",
-       "review_scores_cleanliness                         40.501789\n",
-       "Unnamed: 0                                       -40.306056\n",
-       "bathrooms_text_3 baths                            34.541709\n",
-       "neighbourhood_cleansed_Frogner                    32.620831\n",
-       "host_acceptance_rate                              31.367734\n",
-       "neighbourhood_cleansed_Bjerke                     30.527548\n",
+       "host_listings_count                             0.211189\n",
+       "estimated_occupancy_l365d                      -0.201713\n",
+       "estimated_revenue_l365d                         0.186291\n",
+       "room_type_Private room                         -0.147566\n",
+       "bedrooms                                        0.122292\n",
+       "accommodates                                    0.122195\n",
+       "distance_to_center_km                          -0.104390\n",
+       "calculated_host_listings_count                 -0.095093\n",
+       "host_total_listings_count                      -0.091005\n",
+       "availability_30                                 0.076219\n",
+       "minimum_maximum_nights                         -0.076090\n",
+       "maximum_maximum_nights                          0.066000\n",
+       "room_type_Shared room                          -0.057949\n",
+       "neighbourhood_cleansed_Frogner                  0.037871\n",
+       "availability_365                                0.037745\n",
+       "bathrooms_text_2 baths                          0.035188\n",
+       "number_of_reviews_l30d                         -0.033742\n",
+       "host_response_rate                              0.031110\n",
+       "bathrooms_text_1 bath                          -0.027641\n",
+       "review_scores_cleanliness                       0.025720\n",
+       "calculated_host_listings_count_private_rooms   -0.024885\n",
+       "host_acceptance_rate                            0.024791\n",
+       "bathrooms_text_2.5 baths                        0.020147\n",
+       "review_scores_location                          0.019965\n",
+       "Unnamed: 0                                     -0.018881\n",
+       "bathrooms_text_1 private bath                   0.017352\n",
+       "neighbourhood_cleansed_Nordstrand               0.017046\n",
+       "number_of_reviews_ltm                           0.016902\n",
+       "review_scores_rating                            0.014666\n",
+       "minimum_minimum_nights                         -0.014634\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,47 +237,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "58326628",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "estimated_revenue_l365d                        707.935856\n",
-       "estimated_occupancy_l365d                     -498.012756\n",
-       "minimum_maximum_nights                         179.443304\n",
-       "maximum_maximum_nights                        -149.097876\n",
-       "bedrooms                                       143.846540\n",
-       "host_listings_count                            110.534446\n",
-       "accommodates                                    96.166426\n",
-       "availability_90                                 91.072150\n",
-       "distance_to_center_km                          -87.281942\n",
-       "calculated_host_listings_count                  85.588149\n",
-       "bathrooms                                       72.810136\n",
-       "availability_60                                 69.293656\n",
-       "neighbourhood_cleansed_Indre By                 67.551204\n",
-       "property_type_grouped_Hotel                    -46.169651\n",
-       "neighbourhood_cleansed_Østerbro                 39.102481\n",
-       "review_scores_cleanliness                       38.590529\n",
-       "bathrooms_text_4 baths                          37.886317\n",
-       "host_acceptance_rate                            35.161208\n",
-       "bathrooms_text_4 shared baths                  -27.876669\n",
-       "host_is_superhost                               20.235066\n",
-       "host_response_rate                              20.058842\n",
-       "neighbourhood_cleansed_Frederiksberg            20.056711\n",
-       "bathrooms_text_2.5 baths                        19.070886\n",
-       "property_type_grouped_Entire Luxury             18.743462\n",
-       "maximum_nights                                 -16.601264\n",
-       "bathrooms_text_1.5 baths                        12.822593\n",
-       "number_of_reviews_ly                           -11.883976\n",
-       "calculated_host_listings_count_entire_homes     11.667491\n",
-       "neighbourhood_cleansed_Valby                   -11.452529\n",
-       "bathrooms_text_2 baths                          10.871735\n",
+       "host_total_listings_count               -0.199463\n",
+       "host_listings_count                      0.196844\n",
+       "estimated_revenue_l365d                  0.137205\n",
+       "estimated_occupancy_l365d               -0.123676\n",
+       "accommodates                             0.108347\n",
+       "bedrooms                                 0.104954\n",
+       "room_type_Private room                  -0.089970\n",
+       "distance_to_center_km                   -0.085969\n",
+       "availability_90                          0.073938\n",
+       "calculated_host_listings_count           0.068090\n",
+       "neighbourhood_cleansed_Indre By          0.062859\n",
+       "availability_60                          0.051277\n",
+       "room_type_Shared room                   -0.041945\n",
+       "property_type_grouped_Hotel             -0.039986\n",
+       "host_acceptance_rate                     0.029782\n",
+       "neighbourhood_cleansed_Østerbro          0.028737\n",
+       "host_response_rate                       0.025924\n",
+       "review_scores_cleanliness                0.024918\n",
+       "review_scores_rating                     0.023393\n",
+       "bathrooms_text_2 baths                   0.022521\n",
+       "host_is_superhost                        0.020215\n",
+       "review_scores_accuracy                   0.018192\n",
+       "bathrooms_text_1.5 baths                 0.017878\n",
+       "bathrooms_text_2.5 baths                 0.017044\n",
+       "neighbourhood_cleansed_Valby            -0.016363\n",
+       "neighbourhood_cleansed_Brønshøj-Husum   -0.015901\n",
+       "neighbourhood_cleansed_Bispebjerg       -0.014615\n",
+       "availability_eoy                         0.013401\n",
+       "neighbourhood_cleansed_Vanløse          -0.013214\n",
+       "bathrooms                                0.012809\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "f7a84bd3",
    "metadata": {},
    "outputs": [
@@ -300,9 +300,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Common features: {'estimated_revenue_l365d', 'estimated_occupancy_l365d', 'property_type_grouped_Hotel', 'host_response_rate', 'review_scores_cleanliness', 'availability_365', 'host_acceptance_rate', 'maximum_maximum_nights', 'maximum_minimum_nights', 'property_category_Hotel', 'host_identity_verified', 'bathrooms_text_4 shared baths', 'bathrooms', 'bathrooms_text_2 baths', 'accommodates', 'calculated_host_listings_count', 'bathrooms_text_3 baths', 'bedrooms', 'distance_to_center_km', 'host_is_superhost', 'bathrooms_text_2.5 baths', 'minimum_maximum_nights', 'maximum_nights', 'host_listings_count', 'property_type_Hotel', 'room_type_Shared room'}\n",
-      "Only Oslo: {'neighbourhood_cleansed_Grünerløkka', 'beds', 'neighbourhood_cleansed_Nordstrand', 'property_category_Special', 'bathrooms_text_3.5 baths', 'number_of_reviews', 'property_type_Private Standard', 'maximum_nights_avg_ntm', 'neighbourhood_cleansed_Grorud', 'neighbourhood_cleansed_Ullern', 'neighbourhood_cleansed_Bjerke', 'review_scores_rating', 'neighbourhood_cleansed_St. Hanshaugen', 'neighbourhood_cleansed_Søndre Nordstrand', 'neighbourhood_cleansed_Gamle Oslo', 'host_response_time', 'bathrooms_text_1 bath', 'bathrooms_text_4.5 baths', 'property_privacy_level_Private', 'neighbourhood_cleansed_Frogner', 'bathrooms_text_2.5 shared baths', 'bathrooms_text_1.5 shared baths', 'bathrooms_text_3 shared baths', 'neighbourhood_cleansed_Østensjø', 'property_privacy_level_Hotel', 'availability_30', 'has_reviews', 'property_type_grouped_Private Standard', 'host_total_listings_count', 'review_scores_location', 'calculated_host_listings_count_private_rooms', 'neighbourhood_cleansed_Nordre Aker', 'property_type_grouped_Entire Alternative', 'Unnamed: 0', 'property_type_Entire Alternative'}\n",
-      "Only Copenhagen: {'neighbourhood_cleansed_Nørrebro', 'bathrooms_text_4 baths', 'neighbourhood_cleansed_Valby', 'calculated_host_listings_count_entire_homes', 'neighbourhood_cleansed_Indre By', 'availability_eoy', 'instant_bookable', 'neighbourhood_cleansed_Østerbro', 'review_scores_accuracy', 'availability_90', 'property_type_grouped_Entire Luxury', 'calculated_host_listings_count_shared_rooms', 'property_type_Entire Luxury', 'number_of_reviews_ly', 'neighbourhood_cleansed_Bispebjerg', 'neighbourhood_cleansed_Frederiksberg', 'availability_60', 'bathrooms_text_1.5 baths', 'bathrooms_text_2 shared baths', 'neighbourhood_cleansed_Vanløse'}\n"
+      "Common features: {'estimated_revenue_l365d', 'estimated_occupancy_l365d', 'bathrooms_text_4 baths', 'host_response_rate', 'bathrooms_text_1 private bath', 'bathrooms_text_3.5 baths', 'property_category_Special', 'number_of_reviews_ltm', 'review_scores_cleanliness', 'availability_365', 'property_type_Private Standard', 'host_acceptance_rate', 'review_scores_rating', 'review_scores_value', 'minimum_minimum_nights', 'bathrooms_text_4 shared baths', 'bathrooms', 'property_type_grouped_Entire Luxury', 'bathrooms_text_2 baths', 'calculated_host_listings_count_shared_rooms', 'accommodates', 'calculated_host_listings_count', 'bathrooms_text_3 baths', 'bathrooms_text_1.5 shared baths', 'bathrooms_text_3 shared baths', 'bedrooms', 'review_scores_checkin', 'distance_to_center_km', 'bathrooms_text_Private half-bath', 'has_reviews', 'bathrooms_text_Half-bath', 'host_is_superhost', 'property_type_grouped_Private Standard', 'host_total_listings_count', 'bathrooms_text_2.5 baths', 'minimum_maximum_nights', 'review_scores_location', 'bathrooms_text_0 shared baths', 'property_type_grouped_Entire Alternative', 'host_listings_count', 'Unnamed: 0', 'room_type_Private room', 'bathrooms_text_2 shared baths', 'review_scores_communication', 'property_type_Entire Alternative', 'room_type_Shared room'}\n",
+      "Only Oslo: {'neighbourhood_cleansed_Nordstrand', 'beds', 'neighbourhood_cleansed_Grorud', 'maximum_maximum_nights', 'neighbourhood_cleansed_Ullern', 'neighbourhood_cleansed_Stovner', 'neighbourhood_cleansed_Bjerke', 'neighbourhood_cleansed_Sentrum', 'neighbourhood_cleansed_St. Hanshaugen', 'neighbourhood_cleansed_Søndre Nordstrand', 'neighbourhood_cleansed_Gamle Oslo', 'host_response_time', 'bathrooms_text_1 bath', 'bathrooms_text_4.5 baths', 'property_privacy_level_Private', 'property_type_Entire Luxury', 'neighbourhood_cleansed_Frogner', 'bathrooms_text_2.5 shared baths', 'number_of_reviews_ly', 'neighbourhood_cleansed_Marka', 'neighbourhood_cleansed_Østensjø', 'availability_30', 'number_of_reviews_l30d', 'neighbourhood_cleansed_Sagene', 'calculated_host_listings_count_private_rooms', 'neighbourhood_cleansed_Nordre Aker', 'property_category_Luxury', 'neighbourhood_cleansed_Vestre Aker'}\n",
+      "Only Copenhagen: {'neighbourhood_cleansed_Nørrebro', 'neighbourhood_cleansed_Amager Vest', 'bathrooms_text_5 baths', 'property_type_grouped_Hotel', 'neighbourhood_cleansed_Valby', 'number_of_reviews', 'calculated_host_listings_count_entire_homes', 'neighbourhood_cleansed_Indre By', 'availability_eoy', 'instant_bookable', 'neighbourhood_cleansed_Østerbro', 'maximum_minimum_nights', 'neighbourhood_cleansed_Brønshøj-Husum', 'review_scores_accuracy', 'availability_90', 'host_identity_verified', 'neighbourhood_cleansed_Bispebjerg', 'bathrooms_text_1 shared bath', 'property_privacy_level_Hotel', 'neighbourhood_cleansed_Frederiksberg', 'availability_60', 'room_type_Hotel room', 'minimum_nights', 'bathrooms_text_1.5 baths', 'bathrooms_text_Shared half-bath', 'maximum_nights', 'neighbourhood_cleansed_Vanløse'}\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "id": "863220b6",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "id": "2af8e16e",
    "metadata": {},
    "outputs": [],
