--- a/Feature_Selection.ipynb
+++ b/Feature_Selection.ipynb
@@ -321,6 +321,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "id": "215da232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Features set to zero for Copenhagen:\n",
+      "['host_response_time', 'beds', 'maximum_maximum_nights', 'minimum_nights_avg_ntm', 'maximum_nights_avg_ntm', 'has_availability', 'availability_30', 'number_of_reviews_l30d', 'number_of_reviews_ly', 'calculated_host_listings_count_private_rooms', 'property_type_grouped_Entire Standard', 'property_privacy_level_Entire', 'property_privacy_level_Private', 'neighbourhood_cleansed_Amager Øst', 'neighbourhood_cleansed_Bjerke', 'neighbourhood_cleansed_Frogner', 'neighbourhood_cleansed_Gamle Oslo', 'neighbourhood_cleansed_Grorud', 'neighbourhood_cleansed_Grünerløkka', 'neighbourhood_cleansed_Marka', 'neighbourhood_cleansed_Nordre Aker', 'neighbourhood_cleansed_Nordstrand', 'neighbourhood_cleansed_Sagene', 'neighbourhood_cleansed_Sentrum', 'neighbourhood_cleansed_St. Hanshaugen', 'neighbourhood_cleansed_Stovner', 'neighbourhood_cleansed_Søndre Nordstrand', 'neighbourhood_cleansed_Ullern', 'neighbourhood_cleansed_Vesterbro-Kongens Enghave', 'neighbourhood_cleansed_Vestre Aker', 'neighbourhood_cleansed_Østensjø', 'bathrooms_text_1 bath', 'bathrooms_text_2.5 shared baths', 'bathrooms_text_4.5 baths', 'property_type_Entire Luxury', 'property_type_Entire Standard', 'property_type_Hotel', 'property_category_Hotel', 'property_category_Luxury', 'property_category_Standard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso_model_cph = lasso_cph.named_steps[\"model\"]\n",
+    "\n",
+    "# Get coefficients\n",
+    "coef_cph = pd.Series(\n",
+    "    lasso_model_cph.coef_,\n",
+    "    index=feat_cph\n",
+    ")\n",
+    "lasso_cph_zero = coef_cph[coef_cph == 0]\n",
+    "print(\"\\nFeatures set to zero for Copenhagen:\")\n",
+    "print(lasso_cph_zero.index.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "id": "863220b6",
    "metadata": {},
