--- a/analysis/logistic_regression.ipynb
+++ b/analysis/logistic_regression.ipynb
@@ -227,13 +227,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
